test/pointer/fail/ptr_cl07.v3
//@execute 0=true; 1=true; 2=true; 3=true; 4=true; 5=true; 6=true; 7=true; 8=true; 9=false
component ptr_cl07 {
	def main(a: int) -> bool {
		match(a) {
			0: return test(add);
			1: return test(load<byte>);
			2: return test(store<byte>);
			3: return test(load<int>);
			4: return test(store<int>);
			5: return test(lt);
			6: return test(lteq);
			7: return test(gt);
			8: return test(gteq);
		}
		return false;
	}

	def add     (p: Pointer) -> int -> Pointer  { return p.add; }
	def load<T> (p: Pointer) -> void -> T       { return p.load<T>; }
	def store<T>(p: Pointer) -> T -> void       { return p.store<T>; }
	def lt      (p: Pointer) -> Pointer -> bool { return p.lt; }
	def lteq    (p: Pointer) -> Pointer -> bool { return p.lteq; }
	def gt      (p: Pointer) -> Pointer -> bool { return p.gt; }
	def gteq    (p: Pointer) -> Pointer -> bool { return p.gteq; }

	def test<T>(f: Pointer -> T) -> bool {
		var p: Pointer, q = p.add(1);
		return f(p) == f(p) && f(p) != f(q) && f(q) == f(q);
	}
}
